Remnove lombok and save changes