@@ -6,10 +6,8 @@ import ee.tenman.mmse.domain.enumeration.QuestionId;
 import ee.tenman.mmse.domain.enumeration.QuestionType;
 import org.springframework.stereotype.Component;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class Question6 implements Question {
@@ -38,10 +36,10 @@ public class Question6 implements Question {
     }
 
     @Override
-    public List<String> getAnswerOptions() {
-        List<AnswerOption> answerOptions = Arrays.asList(AnswerOption.BALL, AnswerOption.CAR, AnswerOption.MAN, AnswerOption.TREE);
+    public List<AnswerOption> getAnswerOptions() {
+        List<AnswerOption> answerOptions = List.of(AnswerOption.BALL, AnswerOption.CAR, AnswerOption.MAN, AnswerOption.TREE);
         Collections.shuffle(answerOptions);
-        return answerOptions.stream().map(Enum::name).collect(Collectors.toList());
+        return answerOptions;
     }
 
     @Override
